<resources>
    <string name="app_name">登录作业</string> {/* 您可以将 "Activitys" 修改为 "课后作业App" 或其他您喜欢的名称 */}

    <!-- LoginActivity -->
    <string name="login_title">用户登录</string>
    <string name="username_hint">请输入用户名</string>
    <string name="password_hint">请输入密码</string>
    <string name="login_button_text">登录</string>
    <string name="login_success">登录成功</string>
    <string name="login_failed">用户名或密码错误</string>
    <string name="username_cannot_be_empty">用户名不能为空</string>
    <string name="password_cannot_be_empty">密码不能为空</string>

    <!-- MainActivity -->
    <string name="welcome_message">欢迎, %1$s!</string>
    <string name="dial_button">拨号</string>
    <string name="sms_button">短信</string>
    <string name="browser_button">浏览器</string>
    <string name="content_display_initial_text">请通过右上角菜单切换内容</string>

    <!-- Options Menu Items -->
    <string name="menu_item_switch_content1">切换内容1</string>
    <string name="menu_item_switch_content2">切换内容2</string>
    <string name="menu_item_open_new_page">打开新页面</string>
    <string name="menu_item_open_camera">打开摄像头</string>

    <!-- Toasts for menu actions -->
    <string name="toast_content1_switched">内容已切换为: 内容1的详情</string>
    <string name="toast_content2_switched">内容已切换为: 内容2的详情</string>
    <string name="toast_opening_new_page">正在打开新页面...</string>
    <string name="toast_opening_camera">正在打开摄像头...</string>
    <string name="camera_permission_denied">相机权限被拒绝</string>
    <string name="camera_not_found">未找到相机应用</string>
    <string name="sms_not_found">未找到短信应用</string>
    <string name="photo_taken">照片已拍摄</string>


    <!-- NewPageActivity -->
    <string name="new_page_title">新页面</string>
    <string name="new_page_content">这是一个从主页菜单跳转过来的新页面。</string>

</resources>